--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
+    "name": "ZF2AlbumDoctrine",
+    "description": "Album Rest API using Doctrine",
     "license": "BSD-3-Clause",
     "keywords": [
         "framework",
-        "zf2"
+        "zf2",
+        "doctrine"
     ],
     "homepage": "http://framework.zend.com/",
     "require": {
